// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link ACT theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-67e1jg-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ACT_ET theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-x945fu-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURA theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-pbercg-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1cwl7pa-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;

exports[`Link ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-a8fvvo-MuiTypography-root-MuiLink-root"
    href="https://www.act.org"
    target="_blank"
  >
    <div>
      children
    </div>
  </a>
</div>
`;
